# advent_of_code_2022

./: .gitignore  README.md  pyproject.toml
01/: readme.md  solve_part_1.rb
02/: readme.md  solve_part_1.rb
03/: readme.md  solve_part_1.rb  solve_part_2.rb
04/: allen_algebra.rb  readme.md  solve.rb
05/: readme.md  sample.txt  solve.rb
06/: readme.md  solve.rb
07/: readme.md  solve.rb
1/: solve_part_2.rb
10/: readme.md  solve.rb
12/: solve.py
2/: readme.md  solve_part_2.rb
script/: new
