[tool.poetry]
name = "advent_of_code_2022"
version = "0.1.0"
description = ""
authors = ["Will Fitzgerald <willf@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^2.8.8"

[tool.poetry.dev-dependencies]
jupyterlab-black = "^0.2.1"
black = "^22.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.0"
isort = "^5.10.1"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
